<?xml version="1.0"?>
<package format="2">
  <name>erl_models</name>
  <version>0.0.0</version>
  <description>The erl_models package</description>

  <maintainer email="natanaso@todo.todo">natanaso</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>topic_tools</depend>
  
  <export>
  </export>
</package>

